@@ -257,3 +257,4 @@ Entity中toVo区别是否忽略大小写
 2.15.7
 1、扩充JSONUtil
 2、Conver类中的转换方法添加无默认值的方法
+3、StrUtil添加addPrefixIfNot和addSuffixIfNot两个方法
